--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -63,6 +63,7 @@ author_profile: true
 </p>
 <div id="aggregation" class="abstract-content">
   One third of U.S. mortgages are originated by small correspondent lenders and then aggregated and securitized by large aggregators. Despite the considerable size and importance of aggregators in channelling funding to the housing market, our understanding of this market remains limited. I construct a novel dataset on correspondent lender-aggregator relationships to study the causal effect of mortgage aggregation on credit supply. Exploiting the U.S. implementation of Basel III as a negative shock to aggregation, I find a significant impact on credit supply, especially to low-income borrowers. Matching frictions in the aggregation market contribute to the overall credit supply decline, while aggregators' optimal portfolio reallocation and correspondent lenders' specialization across demographic groups drive the unequal impact on low-income borrowers. My results highlight the important role of mortgage aggregation in reducing securitization frictions and expanding credit access.
+</div>
 
 <p>
     <a style="text-decoration:none; color:rgb(12, 35, 68); font-weight:bold" href="http://keling-zheng.github.io/files/papers/si.pdf">Lending by Servicing: Monetary Policy Transmission through Shadow Banks</a>
