--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,16 +1,34 @@
 ---
 layout: archive
-title: "Discussions"
-permalink: /talks/
+permalink: /discussions/
+title: ""
 author_profile: true
 ---
 
-{% if site.talkmap_link == true %}
+<p>
+    <strong>Consumption Wedges: Measuring and Diagnosing Distortions</strong>
+    <a style="text-decoration:none; background-color:#f8f8f8; font-size: 16px; font-family: Roboto Slab, serif;" href="http://timhdesilva.github.io/files/discussions/2025_wfa.pdf"><span style="color: gray;">[+]</span> <span style="color:black;">Slides</span></a>
+    <br>Authors: Indarte, Kluender, Malmendier, and Stepner <br>Conference: 2025 WFA
+</p>
 
-<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
+<p>
+    <strong>Household Debt Overhang and Human Capital Investment</strong>
+    <a style="text-decoration:none; background-color:#f8f8f8; font-size: 16px; font-family: Roboto Slab, serif;" href="http://timhdesilva.github.io/files/discussions/2024_sfs.pdf"><span style="color: gray;">[+]</span> <span style="color:black;">Slides</span></a>
+    <br>Authors: Manso, Rivera, Wang, and Xia<br>Conference: 2024 SFS Cavalcade North America
+</p>
 
-{% endif %}
-
-{% for post in site.talks reversed %}
-  {% include archive-single-talk.html %}
-{% endfor %}
+<p>
+    <strong>Memory, Time-Varying Expectations, and Asset Prices</strong>
+    <a style="text-decoration:none; background-color:#f8f8f8; font-size: 16px; font-family: Roboto Slab, serif;" href="http://timhdesilva.github.io/files/discussions/2022_bse.pdf"><span style="color: gray;">[+]</span> <span style="color:black;">Slides</span></a>
+    <br>Authors: Ascari and Zhang<br>Conference: 2022 BSE PhD Workshop on Expectations in Macroeconomics
+</p>
+<p>
+    <strong>Learning of Trading Talent: Theory and Evidence from Institutional Investors in the US</strong>
+    <a style="text-decoration:none; background-color:#f8f8f8; font-size: 16px; font-family: Roboto Slab, serif;" href="http://timhdesilva.github.io/files/discussions/2021_tadc.pdf"><span style="color: gray;">[+]</span> <span style="color:black;">Slides</span></a>
+    <br>Author: He<br>Conference: 2021 Transatlantic Doctoral Conference in Finance   
+</p>
+<p>
+    <strong>Systematic Risk in Earnings and Expected Stock Returns</strong>
+    <a style="text-decoration:none; background-color:#f8f8f8; font-size: 16px; font-family: Roboto Slab, serif;" href="http://timhdesilva.github.io/files/discussions/2020_aaa.pdf"><span style="color: gray;">[+]</span> <span style="color:black;">Slides</span></a>
+    <br>Authors: Chen, Chen, and Jiang<br>Conference: 2020 American Accounting Association Annual Meeting 
+</p>
