--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -68,11 +68,14 @@ author_profile: true
 <p>
     <a style="text-decoration:none; color:rgb(12, 35, 68); font-weight:bold" href="http://keling-zheng.github.io/files/papers/si.pdf">Lending by Servicing: Monetary Policy Transmission through Shadow Banks</a>
     <br>with <a style="text-decoration:none; color:gray" href="https://agarwalisha.com/">Isha Agarwal</a>, Malin Hu, <a style="text-decoration:none; color:gray" href="https://www.philadelphiafed.org/our-people/raluca-a-roman">Raluca A. Roman</a>
-    <br>
     <br><strong>Review of Financial Studies</strong>, Revise & Resubmitted
-      <button class="abstract-button" data-target="si" style="margin-top:8px">Abstract</button>
+    <br>
+      <button class="abstract-button" data-target="msr" style="margin-top: 8px; margin-right: 10px;">Abstract</button>
+    <ul style="margin-top: -12px">
+      <li>Media Coverage: <a style="text-decoration:none; color:gray" href="https://www.suerf.org/publications/suerf-policy-notes-and-briefs/the-mortgage-servicing-channel-understanding-monetary-policy-transmission-through-shadow-banks/">SUERF</a></li>
+    </ul>
 </p>
-<div id="si" class="abstract-content">
+<div id="msr" class="abstract-content">
   We propose a new conceptual framework for monetary policy transmission through shadow banks in the mortgage market that highlights the role of mortgage servicing in generating non-deposit funds for lending. We document that mortgage servicing acts as a natural hedge against interest rate shocks and dampens the effect of monetary policy on shadow bank mortgage lending. Higher interest rates reduce prepayment risk, increasing the collateral value of mortgage servicing assets and cashflow from servicing income. This enables shadow banks with greater exposure to mortgage servicing to obtain more funding. The mortgage servicing channel is weaker for traditional banks due to their reliance on deposit funding and the capital charge on mortgage servicing assets. Our estimates imply that the rising share of shadow banks in mortgage servicing has weakened the pass-through of monetary policy to aggregate mortgage lending.
 </div>
 
