--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -58,7 +58,7 @@ author_profile: true
 <h2 id="working-papers">Working Papers</h2>
 
 <p>
-  <a style="text-decoration:none; color:rgb(12, 35, 68); font-weight:bold" href="http://keling-zheng.github.io/files/papers/aggregation.pdf">Mortgage Aggregation and Credit Supply</a>
+  <a style="text-decoration:underline; color:rgb(12, 35, 68); font-weight:bold" href="http://keling-zheng.github.io/files/papers/aggregation.pdf">Mortgage Aggregation and Credit Supply</a>
   <br>
     <button class="abstract-button" data-target="aggregation" style="margin-top:8px; margin-right: 10px;">Abstract</button>
 </p>
@@ -67,13 +67,13 @@ author_profile: true
 </div>
 
 <p>
-    <a style="text-decoration:none; color:rgb(12, 35, 68); font-weight:bold" href="http://keling-zheng.github.io/files/papers/si.pdf">Lending by Servicing: Monetary Policy Transmission through Shadow Banks</a>
-    <br>with <a style="text-decoration:none; color:gray" href="https://agarwalisha.com/">Isha Agarwal</a>, Malin Hu, <a style="text-decoration:none; color:gray" href="https://www.philadelphiafed.org/our-people/raluca-a-roman">Raluca A. Roman</a>
+    <a style="text-decoration:underline; color:rgb(12, 35, 68); font-weight:bold" href="http://keling-zheng.github.io/files/papers/si.pdf">Lending by Servicing: Monetary Policy Transmission through Shadow Banks</a>
+    <br>with <a style="text-decoration:underline; color:blue" href="https://agarwalisha.com/">Isha Agarwal</a>, Malin Hu, <a style="text-decoration:underline; color:blue" href="https://www.philadelphiafed.org/our-people/raluca-a-roman">Raluca A. Roman</a>
     <br><strong>Review of Financial Studies</strong>, Revise & Resubmitted
     <br>
       <button class="abstract-button" data-target="msr" style="margin-top: 8px; margin-right: 10px;">Abstract</button>
     <ul style="margin-top: -12px">
-      <li>Media Coverage: <a style="text-decoration:none; color:gray" href="https://www.suerf.org/publications/suerf-policy-notes-and-briefs/the-mortgage-servicing-channel-understanding-monetary-policy-transmission-through-shadow-banks/">SUERF</a></li>
+      <li>Media Coverage: <a style="text-decoration:underline; color:blue" href="https://www.suerf.org/publications/suerf-policy-notes-and-briefs/the-mortgage-servicing-channel-understanding-monetary-policy-transmission-through-shadow-banks/">SUERF</a></li>
     </ul>
 </p>
 <div id="msr" class="abstract-content">
@@ -82,7 +82,7 @@ author_profile: true
 
 <p>
     <a style="text-decoration:none; color:rgb(12, 35, 68); font-weight:bold" href="http://keling-zheng.github.io/files/papers/politician.pdf">Do Politicians Profit from Real Estate?</a>
-    <br>with <a style="text-decoration:none; color:gray" href="https://sites.google.com/site/mbaldauf/">Markus Baldauf</a>, <a style="text-decoration:none; color:gray" href="https://sites.google.com/site/jackfavilukis/home">Jack Favilukis</a>, and <a style="text-decoration:none; color:gray" href="https://sites.google.com/site/lorenzogarlappi/">Lorenzo Garlappi</a>
+    <br>with <a style="text-decoration:underline; color:blue" href="https://sites.google.com/site/mbaldauf/">Markus Baldauf</a>, <a style="text-decoration:underline; color:blue" href="https://sites.google.com/site/jackfavilukis/home">Jack Favilukis</a>, and <a style="text-decoration:underline; color:blue" href="https://sites.google.com/site/lorenzogarlappi/">Lorenzo Garlappi</a>
     <br>
       <button class="abstract-button" data-target="llm_advice" style="margin-top:8px">Abstract</button>
 </p>
@@ -91,8 +91,8 @@ author_profile: true
 </div>
 
 <p>
-  <a style="text-decoration:none; color:rgb(12, 35, 68); font-weight:bold" href="http://keling-zheng.github.io/files/papers/sbl.pdf">How Do Nonbank Mortgage Lenders Shape Bank Small Business Lending?</a>
-  <br>with <a style="text-decoration:none; color:gray" href="https://www.ellenxiyueli.com/">Xiyue Li</a>, <a style="text-decoration:none; color:gray" href="https://www.donglianglu.com/">Dongliang Lu</a>
+  <a style="text-decoration:underline; color:rgb(12, 35, 68); font-weight:bold" href="http://keling-zheng.github.io/files/papers/sbl.pdf">How Do Nonbank Mortgage Lenders Shape Bank Small Business Lending?</a>
+  <br>with <a style="text-decoration:underline; color:blue" href="https://www.ellenxiyueli.com/">Xiyue Li</a>, <a style="text-decoration:underline; color:blue" href="https://www.donglianglu.com/">Dongliang Lu</a>
   <br>
     <button class="abstract-button" data-target="agnostic_dp" style="margin-top:8px; margin-right: 10px;">Abstract</button>
 </p>
@@ -102,7 +102,7 @@ author_profile: true
 
 <p>
   <a style="text-decoration:none; color:rgb(12, 35, 68); font-weight:bold" href="http://keling-zheng.github.io/files/papers/fbt.pdf">Foreign Buyer Tax Impacts on Submarkets: Evidence from Canada</a>
-  <br>with <a style="text-decoration:none; color:gray" href="https://blogs.ubc.ca/davidoff/">Thomas Davidoff</a>
+  <br>with <a style="text-decoration:underline; color:blue" href="https://blogs.ubc.ca/davidoff/">Thomas Davidoff</a>
   <br>
     <button class="abstract-button" data-target="agnostic_dp" style="margin-top:8px; margin-right: 10px;">Abstract</button>
 <div id="agnostic_dp" class="abstract-content">
