--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -67,7 +67,7 @@ author_profile: true
 </div>
 
 <p>
-    <a style="font-size: 1.2em; text-decoration:underline; color:rgb(12, 35, 68); font-weight:bold" href="http://keling-zheng.github.io/files/papers/si.pdf">Lending by Servicing: Monetary Policy Transmission through Shadow Banks</a>
+    <a style="font-size: 1.2em; text-decoration:underline; color:rgb(12, 35, 68); font-weight:bold" href="http://keling-zheng.github.io/files/papers/msr.pdf">Lending by Servicing: Monetary Policy Transmission through Shadow Banks</a>
     <br>with <a style="text-decoration:underline; color:blue" href="https://agarwalisha.com/">Isha Agarwal</a>, Malin Hu, <a style="text-decoration:underline; color:blue" href="https://www.philadelphiafed.org/our-people/raluca-a-roman">Raluca A. Roman</a>
     <br><strong>Review of Financial Studies</strong>, Revise & Resubmitted
     <br>
