--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -13,6 +13,21 @@ author_profile: true
       --abstract-button-gray: #f8f8f8;
       --abstract-content-gray: #f1f1f1;
     }
+
+    .working-papers-box {
+      background-color: #f5f7fa;   /* light grey-blue box */
+      padding: 25px;
+      border-radius: 8px;          /* slightly rounded corners */
+      border: 1px solid #dce2e9;   /* subtle border */
+      margin-bottom: 30px;
+    }
+
+    .working-papers-title {
+      font-size: 28px;             /* larger text size */
+      font-weight: 700;            /* bold */
+      margin-top: 0;
+      margin-bottom: 20px;
+    }
     
     .abstract-button {
       display: inline-flex;
@@ -55,7 +70,8 @@ author_profile: true
   
 <!-----------------------------------------------------------CONTENT---------------------------------------------------------------->
 
-<h2 id="working-papers">Working Papers</h2>
+<div class="working-papers-box">
+  <h2 class="working-papers-title">Working Papers</h2>
 
 <p>
   <a style="font-size: 1.2em; text-decoration:underline; color:rgb(12, 35, 68); font-weight:bold" href="http://keling-zheng.github.io/files/papers/aggregation.pdf">Mortgage Aggregation and Credit Supply</a>
